--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        env:
+        # env:
           # macOS notarization API key
           # API_KEY_ID: ${{ secrets.api_key_id }}
           # API_KEY_ISSUER_ID: ${{ secrets.api_key_issuer_id }}
